################################################################################
#                                                                              #
# Copyright (C) 2020 Fondazione Istituto Italiano di Tecnologia (IIT)          #
# All Rights Reserved.                                                         #
#                                                                              #
################################################################################

add_subdirectory(object_detection)
add_subdirectory(action_recognition)
add_subdirectory(manipulation)
add_subdirectory(move_camera)